--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ redis.clients.redisPoolMaxTotal=15
 redis.clients.redisTimeout=1000
 spring.data.mongodb.uri=mongodb+srv://vijaykumarsunkari049:Vijju_123@zogg-cluster.8lemi.mongodb.net/zogg?retryWrites=true&w=majority
 
+server.error.whitelabel.enabled=false
