--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,4 @@ redis.clients.redisPoolMaxTotal=15
 redis.clients.redisTimeout=1000
 spring.data.mongodb.uri=mongodb+srv://vijaykumarsunkari049:Vijju_123@zogg-cluster.8lemi.mongodb.net/zogg?retryWrites=true&w=majority
 
+firebase.credentials.path=classpath:firebase/myzoggapp-notification-firebase-adminsdk-fbsvc-b67dfc7a02.json
